err/django-listings.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_listings-0.1.egg-info'...
Listing './lib/python3.5/site-packages/listings'...
Compiling './lib/python3.5/site-packages/listings/management.py'...
***   File "./lib/python3.5/site-packages/listings/management.py", line 34
    print "Skipping creation of NoticeTypes as notification app not found"
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/listings/media'...
Listing './lib/python3.5/site-packages/listings/media/css'...
Listing './lib/python3.5/site-packages/listings/templates'...
Listing './lib/python3.5/site-packages/listings/templates/listings'...
Listing './lib/python3.5/site-packages/listings/templates/listings/tags'...
Listing './lib/python3.5/site-packages/listings/templates/notification'...
Listing './lib/python3.5/site-packages/listings/templates/notification/listing_change'...
Listing './lib/python3.5/site-packages/listings/templates/notification/listing_comment'...
Listing './lib/python3.5/site-packages/listings/templates/notification/listing_delete'...
Listing './lib/python3.5/site-packages/listings/templates/notification/listing_done'...
Listing './lib/python3.5/site-packages/listings/templates/notification/listing_new'...
Listing './lib/python3.5/site-packages/listings/templates/notification/listing_watch_start'...
Listing './lib/python3.5/site-packages/listings/templates/notification/listing_watch_stop'...
Listing './lib/python3.5/site-packages/listings/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
